--- a/web_client/package.json
+++ b/web_client/package.json
@@ -29,6 +29,7 @@
     "@angular/platform-browser-dynamic": "10.1.4",
     "@angular/platform-server": "10.1.4",
     "@angular/router": "10.1.4",
+    "@truffle/contract": "^4.0.33",
     "ajv": "6.12.5",
     "arrive": "2.4.1",
     "bootstrap": "4.5.2",
@@ -48,6 +49,7 @@
     "rxjs": "6.6.3",
     "rxjs-compat": "6.6.3",
     "web-animations-js": "2.3.2",
+    "web3": "^1.2.1",
     "zone.js": "0.11.1"
   },
   "devDependencies": {
