--- a/web_client/package.json
+++ b/web_client/package.json
@@ -20,9 +20,9 @@
     "@agm/core": "^1.1.0",
     "@angular/animations": "10.1.4",
     "@angular/cdk": "10.2.4",
-    "@angular/common": "10.1.4",
-    "@angular/compiler": "10.1.4",
-    "@angular/core": "10.1.4",
+    "@angular/common": "^10.1.4",
+    "@angular/compiler": "^11.0.5",
+    "@angular/core": "^10.2.4",
     "@angular/forms": "10.1.4",
     "@angular/material": "10.2.4",
     "@angular/platform-browser": "10.1.4",
@@ -50,19 +50,18 @@
     "rxjs-compat": "6.6.3",
     "web-animations-js": "2.3.2",
     "web3": "^1.2.1",
-    "zone.js": "0.11.1"
+    "zone.js": "^0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.1100.2",
-    "@angular/cli": "10.1.4",
-    "@angular/compiler-cli": "10.1.4",
+    "@angular/compiler-cli": "^11.0.5",
     "@angular/language-service": "10.1.4",
     "@types/bootstrap": "4.5.0",
     "@types/chartist": "0.11.0",
     "@types/googlemaps": "3.39.14",
     "@types/jasmine": "3.5.14",
     "@types/jquery": "3.5.2",
-    "@types/node": "14.11.5",
+    "@types/node": "^14.11.5",
     "codelyzer": "6.0.1",
     "jasmine-core": "3.6.0",
     "jasmine-spec-reporter": "6.0.0",
