--- a/web_client/package.json
+++ b/web_client/package.json
@@ -48,6 +48,7 @@
     "popper.js": "1.16.1",
     "rxjs": "6.6.3",
     "rxjs-compat": "6.6.3",
+    "soltypes": "^1.3.3",
     "web-animations-js": "2.3.2",
     "web3": "^1.2.1",
     "zone.js": "^0.10.3"
