--- a/web_client/package.json
+++ b/web_client/package.json
@@ -21,8 +21,8 @@
     "@angular/animations": "10.1.4",
     "@angular/cdk": "10.2.4",
     "@angular/common": "^10.1.4",
-    "@angular/compiler": "^11.0.5",
-    "@angular/core": "^10.2.4",
+    "@angular/compiler": "10.1.4",
+    "@angular/core": "10.1.4",
     "@angular/forms": "10.1.4",
     "@angular/material": "10.2.4",
     "@angular/platform-browser": "10.1.4",
@@ -48,6 +48,7 @@
     "popper.js": "1.16.1",
     "rxjs": "6.6.3",
     "rxjs-compat": "6.6.3",
+    "secure-web-storage": "^1.0.2",
     "soltypes": "^1.3.3",
     "web-animations-js": "2.3.2",
     "web3": "^1.2.1",
@@ -55,7 +56,8 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.1100.2",
-    "@angular/compiler-cli": "^11.0.5",
+    "@angular/cli": "10.1.4",
+    "@angular/compiler-cli": "10.1.4",
     "@angular/language-service": "10.1.4",
     "@types/bootstrap": "4.5.0",
     "@types/chartist": "0.11.0",
